--- a/package.json
+++ b/package.json
@@ -1,33 +1,39 @@
 {
-  "name": "sveltekit-statiko-boilerplate",
+  "name": "sveltekit-static-boilerplate",
   "version": "0.1.0",
   "author": "Ivo Dolenc",
   "license": "MIT",
-  "private": true,
+  "funding": "https://github.com/sponsors/ivodolenc",
   "type": "module",
   "scripts": {
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
     "fix:eslint": "eslint --fix .",
     "fix:prettier": "prettier --write .",
-    "dev": "vite --config .config/vite.config.js dev",
-    "build": "vite --config .config/vite.config.js build",
-    "preview": "vite --config .config/vite.config.js preview"
+    "dev": "vite --config .config/vite.config.ts dev",
+    "build": "vite --config .config/vite.config.ts build",
+    "preview": "vite --config .config/vite.config.ts preview"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.48",
-    "@sveltejs/kit": "1.0.0-next.538",
+    "@sveltejs/kit": "1.0.0-next.560",
+    "@types/node": "^18.11.9",
+    "@types/postcss-import": "^14.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.27.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "postcss": "^8.4.18",
+    "postcss": "^8.4.19",
     "postcss-import": "^15.0.0",
-    "prettier": "^2.7.1",
-    "prettier-plugin-svelte": "^2.8.0",
-    "svelte": "^3.52.0",
-    "tailwindcss": "^3.2.2",
-    "vite": "^3.2.3"
+    "prettier": "^2.8.0",
+    "prettier-plugin-svelte": "^2.8.1",
+    "svelte": "^3.53.1",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4"
   },
   "eslintConfig": {
     "extends": "./.config/eslint.config.cjs"
