--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
 .DS_Store
 node_modules
+*.log*
 .private
+.cache
+.env
+.env.*
+.npmrc
 .svelte-kit
-build
+dist
+/build
+/functions
+/package
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
