--- a/package.json
+++ b/package.json
@@ -1,42 +1,49 @@
 {
-  "name": "sveltekit-static-boilerplate",
+  "name": "sveltekit-boilerplate",
   "version": "0.1.0",
   "author": "Ivo Dolenc",
+  "description": "This is the latest SvelteKit starter template.",
   "license": "MIT",
-  "funding": "https://github.com/sponsors/ivodolenc",
+  "repository": "ivodolenc/sveltekit-boilerplate",
+  "homepage": "https://github.com/ivodolenc/sveltekit-boilerplate",
+  "private": true,
   "type": "module",
+  "keywords": [
+    "svelte",
+    "sveltekit",
+    "boilerplate",
+    "template",
+    "starter"
+  ],
   "scripts": {
-    "lint:eslint": "eslint .",
-    "lint:prettier": "prettier --check .",
-    "fix:eslint": "eslint --fix .",
-    "fix:prettier": "prettier --write .",
-    "dev": "vite --config .config/vite.config.ts dev",
-    "build": "vite --config .config/vite.config.ts build",
-    "preview": "vite --config .config/vite.config.ts preview"
+    "sync": "svelte-kit sync",
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "format": "prettier --write ."
+  },
+  "packageManager": "pnpm@9.9.0",
+  "engines": {
+    "node": ">=20.0.0",
+    "pnpm": ">=9.0.0"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.48",
-    "@sveltejs/kit": "1.0.0-next.560",
-    "@types/node": "^18.11.9",
-    "@types/postcss-import": "^14.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "postcss": "^8.4.19",
-    "postcss-import": "^15.0.0",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
-    "svelte": "^3.53.1",
-    "svelte-preprocess": "^4.10.7",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "vite": "^3.2.4"
-  },
-  "eslintConfig": {
-    "extends": "./.config/eslint.config.cjs"
-  },
-  "prettier": "./.config/prettier.config.cjs"
+    "@hypernym/eslint-config": "^3.4.0",
+    "@hypernym/prettier-config": "^3.2.0",
+    "@sveltejs/adapter-static": "^3.0.4",
+    "@sveltejs/kit": "^2.5.26",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
+    "@tailwindcss/vite": "^4.0.0-alpha.23",
+    "@types/node": "^22.5.4",
+    "eslint": "^9.9.1",
+    "eslint-plugin-svelte": "^2.43.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.6",
+    "svelte": "^5.0.0-next.244",
+    "svelte-eslint-parser": "^0.41.0",
+    "tailwindcss": "^4.0.0-alpha.23",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.3"
+  }
 }
