chore: update vscode config

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "EditorConfig.EditorConfig",
-    "svelte.svelte-vscode"
+    "svelte.svelte-vscode",
+    "hypernym-studio.hypernym-icons"
   ]
 }
