--- a/package.json
+++ b/package.json
@@ -23,27 +23,27 @@
     "lint": "eslint .",
     "format": "prettier --write ."
   },
-  "packageManager": "pnpm@9.11.0",
+  "packageManager": "pnpm@9.12.2",
   "engines": {
     "node": ">=20.0.0",
     "pnpm": ">=9.0.0"
   },
   "devDependencies": {
-    "@hypernym/eslint-config": "^3.5.0",
+    "@hypernym/eslint-config": "^3.5.1",
     "@hypernym/prettier-config": "^3.2.0",
     "@sveltejs/adapter-static": "^3.0.5",
-    "@sveltejs/kit": "^2.5.28",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
-    "@tailwindcss/vite": "^4.0.0-alpha.24",
-    "@types/node": "^22.6.1",
-    "eslint": "^9.11.1",
-    "eslint-plugin-svelte": "^2.44.0",
+    "@sveltejs/kit": "^2.7.2",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0-alpha.29",
+    "@types/node": "^22.7.9",
+    "eslint": "^9.13.0",
+    "eslint-plugin-svelte": "^2.46.0",
     "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.2.6",
-    "svelte": "^5.0.0-next.258",
-    "svelte-eslint-parser": "^0.41.1",
-    "tailwindcss": "^4.0.0-alpha.24",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.7"
+    "prettier-plugin-svelte": "^3.2.7",
+    "svelte": "^5.1.0",
+    "svelte-eslint-parser": "^0.43.0",
+    "tailwindcss": "^4.0.0-alpha.29",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10"
   }
 }
