--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "starter"
   ],
   "scripts": {
-    "sync": "svelte-kit sync",
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
+    "sync": "svelte-kit sync",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "format": "prettier --write ."
   },
   "packageManager": "pnpm@9.12.2",
@@ -31,18 +34,19 @@
   "devDependencies": {
     "@hypernym/eslint-config": "^3.5.1",
     "@hypernym/prettier-config": "^3.2.0",
-    "@sveltejs/adapter-static": "^3.0.5",
-    "@sveltejs/kit": "^2.7.2",
+    "@sveltejs/adapter-static": "^3.0.6",
+    "@sveltejs/kit": "^2.7.3",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
-    "@tailwindcss/vite": "^4.0.0-alpha.29",
+    "@tailwindcss/vite": "^4.0.0-alpha.30",
     "@types/node": "^22.7.9",
     "eslint": "^9.13.0",
     "eslint-plugin-svelte": "^2.46.0",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.7",
-    "svelte": "^5.1.0",
+    "svelte": "^5.1.2",
+    "svelte-check": "^4.0.5",
     "svelte-eslint-parser": "^0.43.0",
-    "tailwindcss": "^4.0.0-alpha.29",
+    "tailwindcss": "^4.0.0-alpha.30",
     "typescript": "^5.6.3",
     "vite": "^5.4.10"
   }
