--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sveltekit-boilerplate",
   "version": "0.1.2",
   "author": "Ivo Dolenc",
-  "description": "This is the latest SvelteKit starter template.",
+  "description": "SvelteKit starter template.",
   "license": "MIT",
   "repository": "ivodolenc/sveltekit-boilerplate",
   "homepage": "https://github.com/ivodolenc/sveltekit-boilerplate",
@@ -38,12 +38,12 @@
     "@sveltejs/kit": "^2.7.3",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0-alpha.30",
-    "@types/node": "^22.7.9",
+    "@types/node": "^22.8.1",
     "eslint": "^9.13.0",
     "eslint-plugin-svelte": "^2.46.0",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.7",
-    "svelte": "^5.1.2",
+    "svelte": "^5.1.3",
     "svelte-check": "^4.0.5",
     "svelte-eslint-parser": "^0.43.0",
     "tailwindcss": "^4.0.0-alpha.30",
