--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "SvelteKit Boilerplate",
   "short_name": "SvelteKit",
-  "description": "This is the latest SvelteKit starter template.",
+  "description": "SvelteKit starter template.",
   "display": "minimal-ui",
   "theme_color": "#ffffff",
   "background_color": "#000000",
