--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint:fix": "eslint --fix .",
     "format": "prettier --write ."
   },
-  "packageManager": "pnpm@9.13.2",
+  "packageManager": "pnpm@9.14.2",
   "engines": {
     "node": ">=20.0.0",
     "pnpm": ">=9.0.0"
@@ -35,18 +35,18 @@
     "@hypernym/eslint-config": "^3.5.2",
     "@hypernym/prettier-config": "^3.2.1",
     "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.8.1",
+    "@sveltejs/kit": "^2.8.2",
     "@sveltejs/vite-plugin-svelte": "^4.0.1",
-    "@tailwindcss/vite": "^4.0.0-alpha.34",
-    "@types/node": "^22.9.0",
+    "@tailwindcss/vite": "^4.0.0-beta.2",
+    "@types/node": "^22.9.3",
     "eslint": "^9.15.0",
     "eslint-plugin-svelte": "^2.46.0",
     "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.2.8",
-    "svelte": "^5.2.3",
-    "svelte-check": "^4.0.9",
+    "prettier-plugin-svelte": "^3.3.2",
+    "svelte": "^5.2.7",
+    "svelte-check": "^4.1.0",
     "svelte-eslint-parser": "^0.43.0",
-    "tailwindcss": "^4.0.0-alpha.34",
+    "tailwindcss": "^4.0.0-beta.2",
     "typescript": "^5.6.3",
     "vite": "^5.4.11"
   }
