--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint:fix": "eslint --fix .",
     "format": "prettier --write ."
   },
-  "packageManager": "pnpm@9.15.1",
+  "packageManager": "pnpm@9.15.4",
   "engines": {
     "node": ">=20.0.0",
     "pnpm": ">=9.0.0"
@@ -35,19 +35,19 @@
     "@hypernym/eslint-config": "^3.5.4",
     "@hypernym/prettier-config": "^3.2.1",
     "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.15.0",
+    "@sveltejs/kit": "^2.16.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/vite": "^4.0.0-beta.8",
-    "@types/node": "^22.10.2",
-    "eslint": "^9.17.0",
+    "@tailwindcss/vite": "^4.0.0",
+    "@types/node": "^22.10.7",
+    "eslint": "^9.18.0",
     "eslint-plugin-svelte": "^2.46.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-svelte": "^3.3.2",
-    "svelte": "^5.16.0",
-    "svelte-check": "^4.1.1",
+    "prettier-plugin-svelte": "^3.3.3",
+    "svelte": "^5.19.2",
+    "svelte-check": "^4.1.4",
     "svelte-eslint-parser": "^0.43.0",
-    "tailwindcss": "^4.0.0-beta.8",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.5"
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11"
   }
 }
