--- a/package.json
+++ b/package.json
@@ -29,28 +29,24 @@
     "lint:fix": "eslint --fix .",
     "format": "prettier --write ."
   },
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.7.1",
   "engines": {
     "node": ">=20.0.0",
-    "pnpm": ">=9.0.0"
+    "pnpm": ">=10.0.0"
   },
   "devDependencies": {
-    "@hypernym/eslint-config": "^3.5.8",
-    "@hypernym/prettier-config": "^3.2.3",
     "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.17.3",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/vite": "^4.0.9",
-    "@types/node": "^22.13.5",
-    "eslint": "^9.21.0",
-    "eslint-plugin-svelte": "^3.0.2",
-    "prettier": "^3.5.2",
-    "prettier-plugin-svelte": "^3.3.3",
-    "svelte": "^5.20.5",
-    "svelte-check": "^4.1.4",
-    "svelte-eslint-parser": "^1.0.0",
-    "tailwindcss": "^4.0.9",
-    "typescript": "^5.7.3",
-    "vite": "^6.2.0"
+    "@sveltejs/kit": "^2.20.3",
+    "@sveltek/eslint-config": "^1.0.0",
+    "@sveltek/prettier-config": "^1.0.2",
+    "@tailwindcss/vite": "^4.1.1",
+    "@types/node": "^22.14.0",
+    "eslint": "^9.23.0",
+    "prettier": "^3.5.3",
+    "svelte": "^5.25.6",
+    "svelte-check": "^4.1.5",
+    "tailwindcss": "^4.1.1",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.4"
   }
 }
