--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "sveltekit-boilerplate",
+  "name": "@sveltek/sveltekit-boilerplate",
   "version": "0.4.4",
-  "author": "Ivo Dolenc",
+  "author": "Sveltek",
   "description": "SvelteKit starter template.",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ivodolenc/sveltekit-boilerplate.git"
+    "url": "git+https://github.com/sveltek/sveltekit-boilerplate.git"
   },
-  "homepage": "https://github.com/ivodolenc/sveltekit-boilerplate",
+  "homepage": "https://github.com/sveltek/sveltekit-boilerplate",
   "private": true,
   "type": "module",
   "keywords": [
@@ -30,18 +30,18 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.21.1",
-    "@sveltek/eslint-config": "^1.1.0",
-    "@sveltek/prettier-config": "^1.0.3",
-    "@tailwindcss/vite": "^4.1.8",
-    "@types/node": "^22.15.29",
-    "eslint": "^9.28.0",
-    "prettier": "^3.5.3",
-    "svelte": "^5.33.10",
-    "svelte-check": "^4.2.1",
-    "tailwindcss": "^4.1.8",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5"
+    "@sveltejs/adapter-static": "^3.0.9",
+    "@sveltejs/kit": "^2.37.0",
+    "@sveltek/eslint-config": "^1.1.2",
+    "@sveltek/prettier-config": "^1.0.4",
+    "@tailwindcss/vite": "^4.1.12",
+    "@types/node": "^24.3.0",
+    "eslint": "^9.34.0",
+    "prettier": "^3.6.2",
+    "svelte": "^5.38.6",
+    "svelte-check": "^4.3.1",
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.4"
   }
 }
